# typesearch

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: basic.rs
typesearch/: Cargo.toml
typesearch-derive/: Cargo.toml
typesearch-derive/src/: attrs.rs  expand.rs  lib.rs  registration.rs
typesearch/src/: derived.rs  field.rs  lib.rs  query.rs  schema.rs
