[workspace]
members = ["typesearch", "typesearch-derive"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ultraspicy/typesearch"
authors = ["Jianfeng Guo <element.no.88@gmail.com>"]
keywords = ["search", "opensearch", "elasticsearch", "tantivy", "type-safe"]
categories = ["database"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.23"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
